objects/LLC_BI__Mortgage__c.object
<CustomObject>
    <description>This object stores information specific to mortgage loans.</description>
    <fields>
        <fullName>LLC_BI__Closing_Disclosure_Issued_Date__c</fullName>
        <description>The user manually populates this field with the date the Closing Disclosure is delivered to the applicant.</description>
        <inlineHelpText>Enter the date the Closing Disclosure is delivered to the applicant.</inlineHelpText>
        <label>Closing Disclosure Issued Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Desired_Cash_Out_Amount_2__c</fullName>
        <description>The user populates this text field to determine the desired amount of cash out for the borrower.</description>
        <inlineHelpText>Enter the total requested amount of cash out by the borrower. Must be a numerical value.</inlineHelpText>
        <label>Desired Cash Out Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Down_Payment_2__c</fullName>
        <description>The user populates this required text field to record the borrower’s total down payment contribution. By default, this field is blank.</description>
        <inlineHelpText>Enter the total down payment amount. Must be a numerical value.</inlineHelpText>
        <label>Down Payment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Jumbo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>-D The user manually selects this checkbox field to indicate that the loan is a jumbo loan for Sherman calculations. By default, this field is deselected.</description>
        <inlineHelpText>Select this checkbox to indicate that the loan is a jumbo loan.</inlineHelpText>
        <label>-D Is Jumbo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan_Estimate_Issued_Date__c</fullName>
        <description>The user manually populates this field with the date the Loan Estimate is delivered to the applicant.</description>
        <inlineHelpText>Enter the date the Loan Estimate is delivered to the applicant.</inlineHelpText>
        <label>Loan Estimate Issued Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system automatically populates this mandatory lookup field with the lookup key that associates the loan record to the mortgage values.</description>
        <inlineHelpText>The system automatically populates this field with a lookup key that associates the loan record to the mortgage values.</inlineHelpText>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Mortgages</relationshipLabel>
        <relationshipName>Mortgages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Purchase_Price_2__c</fullName>
        <description>The user populates this required text field to record the purchase price of the property. By default, this field is blank.</description>
        <inlineHelpText>Enter the purchase price for the property. Must be a numerical value.</inlineHelpText>
        <label>Purchase Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Interest_Percentage__c</fullName>
        <description>The system automatically populates this mandatory field with the total amount of interest the borrower will pay over the life of the loan, expressed as a percentage of the amount of credit extended.</description>
        <inlineHelpText>This system-populated field displays the percentage of total interest a borrower pays over the life of the loan.</inlineHelpText>
        <label>Total Interest Percentage</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Loan_Cost_Over_5_Years__c</fullName>
        <description>The system automatically populates this mandatory field with the total loan cost the borrower will pay over 5 years.</description>
        <inlineHelpText>This system-populated field displays the total loan cost the borrower will pay over 5 years.</inlineHelpText>
        <label>Total Loan Cost Over 5 Years</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Principal_Over_5_Years__c</fullName>
        <description>The system automatically populates this mandatory field with the total principal amount the user will pay over 5 years.</description>
        <inlineHelpText>This system-populated field displays the total principal amount the user will pay over 5 years.</inlineHelpText>
        <label>Total Principal Over 5 Years</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Residential_or_Investment_Property__c</fullName>
        <label>Residential or Investment Property?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Residential</fullName>
                </value>
                <value>
                    <fullName>Investment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Home Lending</label>
    <nameField>
        <displayFormat>HL-{000000}</displayFormat>
        <label>Home Lending Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Home Lendings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>